--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,20 @@ body{
     font-weight: normal;
     border-radius: 50%;
 }
+.btn-primaryp {
+    background-color: #28a3a7;
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+    text-transform: uppercase;
 
+}
+.btn-primaryp:hover {
+    background-color: #1e8888;
+    color: wheat;
+}
 .btn.btn-primary {
     background: var(--bs-primary) !important;
     color: var(--bs-white) !important;
@@ -526,7 +539,27 @@ body{
     75%   {bottom: 9%;}
     100%  {bottom: 0px;}
 }
-
+.job-listing {
+    background-color: #1c1c1c;
+    border-radius: 12px;
+    padding: 20px;
+    color: #fff;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.job-listing:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 16px 24px rgba(0, 0, 0, 0.3);
+}
+.card-title {
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.card-text {
+    margin-bottom: 12px;
+    font-size: 1rem;
+}
 .hero-header {
     padding-top: 220px;
     padding-bottom: 100px;
@@ -759,53 +792,12 @@ body{
 /*** Testimonial Start ***/
 .testimonial {
     position: relative;
-    background: var(--bs-light);
+
     overflow: hidden;
     z-index: 1;
 }
-.testimonial::after {
-    content: "";
-    position: absolute;
-    top: 30%;
-    left: 0;
-    width: 80px;
-    height: 80px;
-    border-radius: 40px;
-    background: url(../img/testimonial-img-2.jpg) center center no-repeat;
-    animation: TestimonialMoveLeft 100s linear infinite;
-    z-index: -1;
 
-}
 
-.testimonial::before {
-    content: "";
-    position: absolute;
-    top: 30%;
-    right: 0;
-    width: 80px;
-    height: 80px;
-    border-radius: 40px;
-    background: url(../img/testimonial-img-3.jpg) center center no-repeat;
-    animation: TestimonialMoveRight 100s linear infinite;
-    z-index: -1;
-
-}
-
-@keyframes TestimonialMoveLeft {
-    0%   {left: 0px;}
-    25%   {top: 100px;}
-    50%   {left: 100%;}
-    75%   {top: 80%;}
-    100%  {left: 0px;}
-}
-
-@keyframes TestimonialMoveRight {
-    0%   {right: 0px;}
-    25%   {top: 100px;}
-    50%   {right: 100%;}
-    75%   {top: 80%;}
-    100%  {right: 0px;}
-}
 
 .testimonial .testimonial-carousel.owl-carousel {
     position: relative;
